<resources>
    <string name="app_name">Gamex</string>

    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_settings">Settings</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>

    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="upcoming_games">Upcoming Games</string>
    <string name="view_all">View All</string>
    <string name="new_and_popular_games">New and Popular Games</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="summary">Summary</string>

    <string name="long_text_placeholder">Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum.

Lorem ipsum lorem ipsum lorem ipsum lorem  ipsum lorem ipsum lorem ipsum
lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem.</string>

    <string name="screenshots">Screenshots</string>
    <string name="clips">Clips</string>
    <string name="platforms">Platforms</string>
    <string name="similar_games">Similar Games</string>
    <string name="add_to_favorites">Add to Favorites</string>
</resources>