<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.fragments.GameDetailFragment">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:elevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    app:menu="@menu/game_detail_menu"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:navigationIcon="@drawable/ic_back" />
            </com.google.android.material.appbar.AppBarLayout>

            <com.bosphere.fadingedgelayout.FadingEdgeLayout
                android:id="@+id/fed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fel_edge="bottom"
                android:elevation="0dp"
                app:fel_size_bottom="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView_game_cover"
                    android:layout_width="match_parent"
                    android:layout_height="450dp"
                    android:scaleType="centerCrop" />
            </com.bosphere.fadingedgelayout.FadingEdgeLayout>

            <TextView
                android:id="@+id/textView_game_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:ellipsize="end"
                android:fontFamily="@font/circularstd_bold"
                android:maxLines="3"
                android:textColor="@color/white"
                android:textSize="35sp"
                app:layout_constraintBottom_toTopOf="@+id/ratingBar_game_rating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/ratingBar_game_rating"
                tools:text="Red Dead Redemption 2" />

            <RatingBar
                android:id="@+id/ratingBar_game_rating"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:isIndicator="true"
                android:numStars="5"
                android:theme="@style/RatingBar"
                app:layout_constraintBottom_toTopOf="@+id/textView_company_name"
                app:layout_constraintStart_toStartOf="@+id/textView_company_name" />

            <TextView
                android:id="@+id/textView_company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/circularstd_bold"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@+id/fed"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Take Two Interactive" />

            <TextView
                android:id="@+id/textView"
                style="@style/TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/circularstd_black"
                android:text="@string/summary"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fed" />

            <TextView
                android:id="@+id/textView_summary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="8"
                android:textAlignment="textStart"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:text="@string/long_text_placeholder" />

            <TextView
                android:id="@+id/textView2"
                style="@style/TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/circularstd_black"
                android:text="@string/screenshots"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_summary" />

            <!--<TextView
                android:id="@+id/textView_viewAll_screenshots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/circularstd_bold"
                android:text="@string/view_all"
                android:textColor="@color/colorSecondary"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView2" />-->


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_screenshots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:listitem="@layout/recyclerview_item_screenshot" />

            <!--TODO: Add platforms section before similar games section-->

            <TextView
                android:id="@+id/textView3"
                style="@style/TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/circularstd_black"
                android:text="@string/similar_games"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerview_screenshots" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_similar_games"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:listitem="@layout/recyclerview_item_game_small" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>