<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.fragments.HomeFragment">

            <!--<com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:elevation="0dp" />
            </com.google.android.material.appbar.AppBarLayout>-->

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager_home_slider"
                android:layout_width="match_parent"
                android:layout_height="290dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.make.dots.dotsindicator.DotsIndicator
                android:id="@+id/dots_home_slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="4dp"
                app:dot_drawable="@drawable/dots_active"
                app:dot_drawable_unselected="@drawable/dots_inactive"
                app:dot_height="6dp"
                app:dot_margin="1dp"
                app:dot_width="6dp"
                app:layout_constraintBottom_toBottomOf="@+id/viewPager_home_slider"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textView2"
                style="@style/TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:fontFamily="@font/circularstd_black"
                android:maxLines="1"
                android:text="@string/upcoming_games"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewPager_home_slider" />

            <TextView
                android:id="@+id/textView_viewAll_upcomingGames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/circularstd_bold"
                android:text="@string/view_all"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_upcoming_games"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:listitem="@layout/recyclerview_item_game_small" />

            <TextView
                android:id="@+id/textView3"
                style="@style/TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:ellipsize="end"
                android:fontFamily="@font/circularstd_black"
                android:maxLines="1"
                android:text="@string/new_and_popular_games"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerview_upcoming_games" />

            <TextView
                android:id="@+id/textView_viewAll_newAndPopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/circularstd_bold"
                android:text="@string/view_all"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_newandpopular_games"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:listitem="@layout/recyclerview_item_game_small" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>